feat: refactor OrderEntityMapper to use Stream.toList() and remove unused constructor; add findAllByRestaurantIdAndStatus method to IOrderRepository